@@ -27,6 +27,8 @@ public enum JobCounter {
   OTHER_LOCAL_MAPS,
   DATA_LOCAL_MAPS,
   RACK_LOCAL_MAPS,
+  SLOTS_MILLIS_MAPS,
+  SLOTS_MILLIS_REDUCES,
   FALLOW_SLOTS_MILLIS_MAPS,
   FALLOW_SLOTS_MILLIS_REDUCES
 }
