@@ -38,6 +38,9 @@ Trunk (unreleased changes)
     MAPREDUCE-467. Provide ability to collect statistics about total tasks 
     and succeeded tasks in different time windows. (sharad)
 
+    MAPREDUCE-740. Log a job-summary at the end of a job, while allowing it
+    to be configured to use a custom appender if desired. (acmurthy)
+
   IMPROVEMENTS
 
     HADOOP-5967. Sqoop should only use a single map task. (Aaron Kimball via
